# gtdb-genomes

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  hatch_build.py  hatch_metadata.py  pyproject.toml
.github/workflows/: ci.yml  live-validation.yml  release.yml
data/gtdb_taxonomy/: releases.tsv
docs/: debug-note-c1-threaded-direct-segfault.md  development-plan.md  implementation-log.md  pipeline-concept.md  real-data-validation.md  usage-details.md
docs/debug-notes/: 2026-03-22-datasets-floor-validation.md
docs/development-notes/: 2026-03-21-c5-crlf-runtime-parser-fix.md  2026-03-21-ci-stable-release-hardening-follow-up.md  2026-03-21-multi-value-gtdb-taxon.md
docs/summary-files/: accession_map.tsv.txt  download_failures.tsv.txt  run_summary.log.txt
licenses/: CC-BY-SA-4.0.txt
packaging/bioconda/: README.md  meta.yaml  meta.yaml.template
src/gtdb_genomes/: __init__.py  __main__.py  assembly_accessions.py  bootstrap_taxonomy.py  bundled_data_validation.py  cli.py  download.py  layout.py  logging_utils.py  metadata.py  metadata_summary_parsing.py  preflight.py  provenance.py  refresh_taxonomy_manifest.py  release_resolver.py  run_identity.py  selection.py  subprocess_utils.py  taxon_normalisation.py  taxonomy.py  taxonomy_bundle.py  workflow.py  workflow_execution.py  workflow_execution_dehydrate.py  workflow_execution_direct.py  workflow_execution_models.py  workflow_execution_payloads.py  workflow_outputs.py  workflow_planning.py  workflow_selection.py
tests/: __init__.py  test_cli.py  test_cli_integration.py  test_download.py  test_edge_contract.py  test_edge_contract_entrypoints.py  test_edge_contract_execution.py  test_edge_contract_outputs.py  test_edge_contract_payloads.py  test_edge_contract_planning.py  test_entrypoints.py  test_hatch_build.py  test_inspect_built_artifacts.py  test_layout.py  test_logging.py  test_metadata.py  test_preflight.py  test_real_data_scripts.py  test_release_resolver.py  test_repo_contracts.py  test_run_identity.py  test_selection.py  test_selection_real_fixtures.py  test_taxonomy_bundle.py  test_workflow_planning.py  test_wrapper.py  workflow_contract_helpers.py
