[project]
name = "gtdb-genomes"
version = "0.1.0"
description = "Download NCBI genomes by GTDB taxon and GTDB release"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.31.0,<2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0,<10.0.0",
]

[project.scripts]
gtdb-genomes = "gtdb_genomes.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"data/gtdb_taxonomy" = "gtdb_genomes/data/gtdb_taxonomy"

[tool.hatch.build.targets.sdist]
include = [
    "data/gtdb_taxonomy/**",
]
