[project]
name = "gtdb-genomes"
version = "0.1.0"
description = "Download NCBI genomes by GTDB taxon and GTDB release"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT AND CC-BY-SA-4.0"
license-files = ["LICENSE", "NOTICE", "licenses/CC-BY-SA-4.0.txt"]
dependencies = [
    "polars>=1.31.0,<2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0,<10.0.0",
]

[project.scripts]
gtdb-genomes = "gtdb_genomes.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"data/gtdb_taxonomy" = "gtdb_genomes/data/gtdb_taxonomy"

[tool.hatch.build.targets.wheel]
packages = ["src/gtdb_genomes"]

[tool.hatch.build.targets.sdist]
include = [
    "src/gtdb_genomes/**",
    "data/gtdb_taxonomy/**",
]
